--- a/SMS.Web/Views/LeaveEarly/History.cshtml
+++ b/SMS.Web/Views/LeaveEarly/History.cshtml
@@ -191,7 +191,7 @@
                             }
                         </td>
                         <td class="col-sticky-11" style="text-align: left">
-                            @if ((User as SMS.Web.Models.CustomPrincipal).Read_Only != true)
+                            @if ((User as SMS.Web.Models.CustomPrincipal).PriorityRole >= 1)
                             {
                                 if (item.ApprovedStatus == 1 || item.ApprovedStatus == 2)
                                 {
