--- a/SMS.Web/Views/BringOut/History.cshtml
+++ b/SMS.Web/Views/BringOut/History.cshtml
@@ -120,6 +120,7 @@
     <script src="~/Assets/js/jquery.dataTables.min.js"></script>
     <script>
         var table = null;
+        var currentRole = null;
         $(document).ready(() => {
             var options = {
                 "serverSide": false,
@@ -138,7 +139,11 @@
                     "type": "POST",
                     "url": "/BringOut/FetchBringOutData",
                     "dataType": "json",
-                    "contentType": 'application/json; charset=utf-8'
+                    "contentType": 'application/json; charset=utf-8',
+                    "dataSrc": function (res) {
+                        currentRole = res.currentRole;
+                        return res.data;
+                    }
                 },
                 "columns": [
                     {
@@ -166,6 +171,10 @@
                     },
                     {
                         data: function (res) {
+                            if (currentRole <= 1) {
+                                return ''
+                            }
+
                             var html = '';
                             if (!res.Status) {
                                 html = `<a class="btn btn-edit btn-standard btnEdit" title="Sửa" href="/BringOut/Edit/${res.ID}">
